<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Liberty High School" />

        <TextView
            android:id="@+id/overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/school_name" />

        <TextView
            android:id="@+id/school_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_title" />

        <TextView
            android:id="@+id/sat_scores_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/sat_scores"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/school_overview" />

        <TextView
            android:id="@+id/sat_test_takers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/total_test_takers"
            android:textAppearance="@style/TextAppearance.Default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_scores_title" />

        <TextView
            android:id="@+id/sat_math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/avg_math_score"
            android:textAppearance="@style/TextAppearance.Default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_test_takers" />

        <TextView
            android:id="@+id/sat_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/avg_writing_scores"
            android:textAppearance="@style/TextAppearance.Default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_math" />

        <TextView
            android:id="@+id/sat_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/avg_reading_scores"
            android:textAppearance="@style/TextAppearance.Default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sat_writing" />

        <TextView
            android:id="@+id/contact_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sat_reading" />

        <TextView
            android:id="@+id/school_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.SubTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_us_title"
            tools:text="Chicago" />

        <TextView
            android:id="@+id/school_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.SubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_location"
            tools:text="Phone: 213-234-1234" />

        <TextView
            android:id="@+id/school_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.SubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_phone"
            tools:text="Email: noname@gmail.com" />

        <TextView
            android:id="@+id/school_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAppearance="@style/TextAppearance.SubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_email"
            tools:text="Website: www.google.com" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>